2008-02-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj at axis dot com>

	* plugins/elements/gstfdsink.c: (gst_fd_sink_render),
	(gst_fd_sink_start), (gst_fd_sink_stop), (gst_fd_sink_unlock),
	(gst_fd_sink_unlock_stop), (gst_fd_sink_update_fd):
	* plugins/elements/gstfdsink.h:
	* plugins/elements/gstfdsrc.c: (gst_fd_src_update_fd),
	(gst_fd_src_start), (gst_fd_src_stop), (gst_fd_src_unlock),
	(gst_fd_src_unlock_stop), (gst_fd_src_create),
	(gst_fd_src_uri_set_uri):
	* plugins/elements/gstfdsrc.h:
	Port to GstPoll. See #505417.

2008-02-27  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/common/libgstreamer.def:
	Add new gst_poll_ symbols to win32 defs.

2008-02-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/net/gstnetclientclock.c:
	(gst_net_client_clock_class_init), (gst_net_client_clock_init),
	(gst_net_client_clock_finalize), (gst_net_client_clock_do_select),
	(gst_net_client_clock_thread), (gst_net_client_clock_start),
	(gst_net_client_clock_stop), (gst_net_client_clock_new):
	* libs/gst/net/gstnetclientclock.h:
	* libs/gst/net/gstnettimeprovider.c:
	(gst_net_time_provider_class_init), (gst_net_time_provider_init),
	(gst_net_time_provider_finalize), (gst_net_time_provider_thread),
	(gst_net_time_provider_start), (gst_net_time_provider_stop),
	(gst_net_time_provider_new):
	* libs/gst/net/gstnettimeprovider.h:
	Use a private stuct to not break ABI.

2008-02-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj at axis dot com>

	* libs/gst/net/gstnetclientclock.c: (gst_net_client_clock_init),
	(gst_net_client_clock_finalize), (gst_net_client_clock_do_select),
	(gst_net_client_clock_thread), (gst_net_client_clock_start),
	(gst_net_client_clock_stop), (gst_net_client_clock_new):
	* libs/gst/net/gstnetclientclock.h:
	* libs/gst/net/gstnettimeprovider.c: (gst_net_time_provider_init),
	(gst_net_time_provider_finalize), (gst_net_time_provider_thread),