@@ -1,4 +1,4 @@
-noinst_PROGRAMS = caps mass-elements complexity
+noinst_PROGRAMS = caps mass-elements complexity gstpollstress
 
 LDADD = $(GST_OBJ_LIBS)
 AM_CFLAGS = $(GST_OBJ_CFLAGS)
